--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,13 +7,13 @@
 
 <h2>Comments</h2>
 <div id="comments">
-    <%= render partial: @post.comments %>
+  <%= render partial: @post.comments %>
 </div>
 
-<%= form_for [@post, Comment.new] do |f| %>
-    <p>
-        <%= f.label :body, "New comment" %> <br />
-        <%= f.text_area :body %>
-    </p>
-    <p><%= f.submit "Add comment" %></p>
+<%= form_for [@post, Comment.new], remote: true do |f| %>
+  <p>
+    <%= f.label :body, "New comment" %><br/>
+    <%= f.text_area :body %>
+  </p>
+  <p><%= f.submit "Add comment" %></p>
 <% end %>
